day-9/app/cofre-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cofre-senhas
  labels:
    app: cofre-senhas
spec:
  selector:
    app: cofre-senhas
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: tcp-app
  type: ClusterIP
